@@ -2,6 +2,9 @@ Revision history for Perl extension Module::Build.
 
 0.27_11
 
+ - copy_if_modified() now preserves the file mode and timestamps for
+   files that are copied.
+
  - Backing out a requirement added in 0.27_06 on the method y_n()
    to always include a default. This behavior would cause existing
    build scripts to start failing. We now fail with a missing default
